bpo-31966: Fixed WindowsConsoleIO.write() for writing empty data. (GH-5754)